--- a/style.css
+++ b/style.css
@@ -8,11 +8,31 @@ body {
   overflow: hidden;
 
   color: #ddd;
-  background: black;
+  background: rgb(26, 26, 26);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: white;
+}
+
+button {
+  all: unset;
+  cursor: pointer;
+  background: white;
+  color: rgb(26, 26, 26);
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: bold;
+
+  padding: 0.5em 1em;
 }
 
 .hidden {
   display: none !important;
+}
+
+.invisible {
+  visibility: hidden !important;
 }
 
 .spinner {
@@ -37,6 +57,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 1rem;
 
   background: inherit;
   z-index: 10;
@@ -65,10 +86,10 @@ body {
 
 .scan-frame .corner {
   position: absolute;
-  border: 8px solid transparent;
-  width: 48px;
-  height: 48px;
-  border-radius: 24px;
+  border: 4px solid transparent;
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
   transform: rotate(45deg);
   margin: -4px;
 }
@@ -119,4 +140,60 @@ body {
 
 #result {
   word-break: break-all;
+}
+
+#toast-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  max-width: 350px;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding: 0.5rem;
+  
+  z-index: 100;
+}
+
+#toast-container .toast {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  padding: 0.75rem;
+
+  border: 1px solid transparent;
+  border-radius: 8px;
+  background: white;
+  color: black;
+  word-wrap: break-word;
+  animation: slide-in 400ms;
+}
+
+#toast-container .toast.error {
+  background: rgb(255, 232, 232);
+  border-color: currentColor;
+}
+
+#toast-container .toast.success {
+  background: rgb(224, 255, 222);
+  border-color: rgb(71, 143, 71);
+}
+
+#toast-container .toast .title {
+  font-weight: bold;
+}
+
+#toast-container .toast .body {
+  color: rgb(90, 90, 90);
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
