--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -140,6 +140,9 @@
   justify-content: center;
   align-items: center;
 
+  width: 100%;
+  height: 100%;
+
   transform: translateY(-22vh);
 }
 
@@ -180,6 +183,18 @@
   bottom: 0;
   left: 0;
   border-bottom-color: inherit;
+}
+
+.video-error-icon {
+  position: absolute;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0.35;
+  font-size: 4em;
 }
 
 #video {
@@ -244,6 +259,8 @@
 
   border-radius: 5px;
   background: rgba(255, 255, 255, 0.2);
+
+  pointer-events: none;
 }
 
 .info-overlay > .header {
