--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -52,6 +52,7 @@
   align-items: center;
   gap: 0.5em;
   padding: 0.25em 0.5em;
+  margin-left: 0.5em;
 
   border-radius: 8px;
   background: rgba(255, 255, 255, 0.2);
@@ -61,14 +62,30 @@
   padding-bottom: 15vh;
 }
 
+#calendar-screen .calendar-list,
+#calendar-screen .calendar-list-loading {
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 8px;
+}
+
 #calendar-screen .calendar-list {
   display: flex;
   flex-direction: column;
   gap: 0.25em;
   width: 100%;
-  max-height: 50%;
+  height: 50%;
+  padding: 0.5em;
 
   overflow-y: auto;
+}
+
+#calendar-screen .calendar-list-loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 50%;
 }
 
 #calendar-screen .calendar-list .list-item {
@@ -81,6 +98,14 @@
   border-radius: 8px;
 }
 
+/* #calendar-screen .calendar-list .list-item.new {
+  background: rgb(48, 48, 48);
+  position: sticky;
+  bottom: -0.5em;
+  margin: -0.5em;
+  padding: 1em;
+} */
+
 #calendar-screen .calendar-list input[type=radio] {
   display: none;
 }
@@ -88,6 +113,10 @@
 #calendar-screen .calendar-list input:checked + .list-item {
   background: rgba(255, 255, 255, 0.2);
 }
+
+/* #calendar-screen .calendar-list input:checked + .list-item.new {
+  background: rgb(105, 105, 105);
+} */
 
 #calendar-screen .calendar-list .list-item .square {
   width: 1em;
@@ -294,6 +323,16 @@
   justify-content: space-between;
   padding: 0.5em 1em;
   font-weight: bold;
+}
+
+.all-reminders-loading {
+  display: flex;
+  justify-content: center;
+  padding: 1em;
+}
+
+.all-reminders-loading .spinner {
+  font-size: 0.75em;
 }
 
 .all-reminders {
