--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -271,8 +271,8 @@
   position: absolute;
   top: 60%;
   bottom: 0;
-  left: 0;
-  right: 0;
+  left: var(--sal);
+  right: var(--sar);
 
   display: flex;
   flex-direction: column;
