--- a/src/styles/design.css
+++ b/src/styles/design.css
@@ -86,7 +86,16 @@ button {
   font-weight: bold;
   transition: background 100ms;
 
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
   padding: 0.75em 3em;
+}
+
+button:not(:disabled):hover {
+  background: rgb(196, 196, 196);
 }
 
 .theme-button {
